--- a/package.json
+++ b/package.json
@@ -33,19 +33,19 @@
     "ux"
   ],
   "author": {
-    "name": "Your Name",
-    "email": "your.email@example.com",
-    "url": "https://github.com/yourusername"
+    "name": "Rajesh",
+    "email": "rajeshlenka19999@gmail.com",
+    "url": "https://github.com/Rajesh07071999"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/react-super-loader.git"
+    "url": "https://github.com/Rajesh07071999/react-super-loader.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/react-super-loader/issues"
+    "url": "https://github.com/Rajesh07071999/react-super-loader/issues"
   },
-  "homepage": "https://github.com/yourusername/react-super-loader#readme",
+  "homepage": "https://github.com/Rajesh07071999/react-super-loader#readme",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
