--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "declarationDir": "dist",
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx", "**/*.stories.tsx"]
 } 
